# clang-layered-system

./: CMakeLists.txt  README
app/: CMakeLists.txt
app/demo/: CMakeLists.txt  demo.c  demo.h
framework/: CMakeLists.txt
framework/common/: CMakeLists.txt  hash.c  list.c  loader.c  log.c  module.c  notify.c  ringbuf.c  rpc_helper.c  str.c  sys.c  timer.c  util.c
framework/include/common/: def.h  exec_wrapper.h  hardware.h  hash.h  installer.h  khash.h  list.h  loader.h  log.h  module.h  notify.h  ringbuf.h  rpc_helper.h  str.h  sys.h  timer.h  util.h
framework/include/framework/: power.h
framework/module/: CMakeLists.txt  location.android.c  power.c
hardware/: CMakeLists.txt  hardware.c
hardware/gps/: CMakeLists.txt  gps.android.c  minmea.c
hardware/include/hardware/: gps.h  hardware.h
loader/: CMakeLists.txt  app_loader.c  framework_loader.c  hardware_loader.c  initd.c  service_loader.c
service/: CMakeLists.txt  launcher.c
service/include/service/: installer.h  lnglat.h  location.h
service/installer/: CMakeLists.txt  installer.c
service/location/: CMakeLists.txt  location.c
service/wrapper/: CMakeLists.txt  lighttpd.c
test/: CMakeLists.txt
test/framework/common/: CMakeLists.txt  test_list.c  test_ringbuf.c  test_str.c  test_string.c
tool/: app.icon  checker-make  cmake-clean  pkg-tool.py
